[package]
authors = ["SatoshiPay"]
edition = "2021"
name = "pendulum_amm"
version = "0.1.0"

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[dependencies]
ink_env = {version = "^3.0.1", default-features = false}
ink_lang = {version = "^3.0.1", default-features = false}
ink_metadata = {version = "^3.0.1", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "^3.0.1", default-features = false}
ink_primitives = {version = "^3.0.1", default-features = false}
ink_storage = {version = "^3.0.1", default-features = false}

scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2", default-features = false, features = ["derive"], optional = true}

num-integer = {version = "0.1.44", default-features = false}

[dev-dependencies]
lazy_static = "1.4.0"
# thiserror = "1.0.31"

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
]
name = "pendulum_amm"
path = "src/lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_primitives/std",
  "ink_metadata/std",
  "ink_prelude/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info/std",
  "num-integer/std",
]
