[package]
name = "pallet-pendulum-amm"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.119", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }

scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"}
frame-system = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
frame-benchmarking = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", optional = true }

pallet-timestamp = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-std = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

[dev-dependencies]
sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "pallet-timestamp/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]