[package]
name = "test-node"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node configured for smart contracts via `pallet-contracts`."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "pendulum-test-node"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }

sc-cli = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-cli", features = ["wasmtime"] }
sp-core = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-core" }
sc-executor = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-executor", features = ["wasmtime"] }
sc-service = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-service", features = ["wasmtime"] }
sc-telemetry = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-telemetry" }
sc-keystore = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-keystore" }
sc-transaction-pool = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-transaction-pool" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-transaction-pool-api" }
sp-consensus = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-consensus" }
sc-consensus = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-consensus" }
sc-consensus-manual-seal = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-consensus-manual-seal" }
sc-client-api = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-client-api" }
sp-runtime = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-runtime" }
sp-timestamp = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-timestamp" }
sp-inherents = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-inherents" }
sp-keyring = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-keyring" }
frame-system = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "frame-system" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "pallet-transaction-payment" }

# These dependencies are used for the node's RPCs
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.13.0", features = ["server"] }
sc-rpc = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-rpc" }
sp-api = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-api" }
sc-rpc-api = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-rpc-api" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-blockchain" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sp-block-builder" }
sc-basic-authorship = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "sc-basic-authorship" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "pallet-contracts-rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "frame-benchmarking" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "frame-benchmarking-cli" }

# Local Dependencies
test-node-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "try-runtime-cli", optional = true }

[build-dependencies]
substrate-build-script-utils = {  git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.24", package = "substrate-build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"test-node-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["test-node-runtime/try-runtime", "try-runtime-cli"]
